--- a/css/main.css
+++ b/css/main.css
@@ -170,4 +170,205 @@ text-decoration: underline;
 }
 /* footer container ends */
 /* Homepage ends */
+/* CART PAGE STARTS */
+/* cart header starts */
+.main-header-cart-logo
+{
+padding:10px;
+margin-right:30%;
+}
+/* .main-header direct child */
+.main-header-cart > div
+{
+vertical-align: middle;
+display: inline-block;
+}
+.main-nav-cart
+{
+vertical-align: middle;
+display: inline-block;
+}
+.main-nav-cart-items
+{
+font-family: 'Ubuntu', sans-serif;
+margin:0;
+padding:0;
+list-style-type: none;
+text-decoration: none;
+}
+.main-header-cart
+{
+background-color: white;
+border:5px solid grey;
+border-top:none;
+border-left:none;
+border-right:none;
+border-bottom-style: groove;
+}
+.main-nav-cart-item
+{
+display: inline-block;
+margin: 0 15px;
+}
+.main-nav-cart-item a
+{
+text-decoration: none;
+color:black;
+font-weight: bold;
+}
+.main-nav-cart-item a:hover
+{
+color:grey;
+}
+/* cart header ends */
+/* Cart-bag container starts */
+.container-cart
+{
+float: left;
+width:65%;
+}
+.bag-cart
+{
+margin:25px;  
+width: 65%;
+height: 20%;
+float: left;
+}
+.bag2-cart
+{
+margin:25px;
+width: 65%;
+height: 20%;
+float: left;
+}
+.img-cart
+{
+float: left;
+width:15%;
+margin:35px;
+padding: 2px;
+}
+.item-desc-cart
+{
+margin-top:50px;
+margin-left:15%;
+width:120%;
+padding:0;
+color:black;
+font-family: 'Ubuntu', sans-serif;
+}
+.item-desc-cart a
+{
+color:black;
+text-decoration: none;
+}
+span
+{
+margin-left:10%;
+paddinG:2PX;
+}
+.bag-button-cart
+{
+margin-left:65%;
+}
+/* Cart-bag container ends */
+/* Cart-order starts */
+.order-cart
+{
+margin:25px;
+width:25%;
+font-family: 'Varela Round', sans-serif;
+border:1px black dashed;
+float:right;
+}
+.order-desc-cart
+{
+margin-left:10px;
+}
+form.example-cart input[type=text] {
+padding: 10px;
+border: 1px solid grey;
+float: left;
+width: 77%;
+margin-left:5px;
+background: #f1f1f1;
+}
+form.example-cart button {
+float: left;
+width: 20%;
+padding: 10px;
+font-size: 16px;
+border: 1px solid grey;
+border-left: none;
+cursor: pointer;
+}
+form.example-cart::after {
+content: "";
+clear: both;
+display: table;
+}
+.coupons-cart
+{
+margin-left:30px;
+margin-bottom:10px;
+}
+.button1-cart{
+font-family: 'Ubuntu', sans-serif;
+background-color: white; 
+color: black; 
+border: 2px solid black;
+font-size:15px;
+font-weight:bold;
+cursor: pointer;
+border-radius:10px;
+padding: 4px 8px;       
+}
+.button1-cart:hover {
+font-family: 'Ubuntu', sans-serif;
+background-color: grey;
+color: white;
+}
+.button2-cart{
+font-family: 'Ubuntu', sans-serif;
+background-color: white; 
+color: black; 
+border: 2px solid black;
+font-size:15px;
+font-weight:bold;
+cursor: pointer;  
+border-radius:10px;  
+padding: 4px 8px;          
+}
+.button2-cart:hover {
+font-family: 'Ubuntu', sans-serif;
+background-color: grey;
+color: white;    
+font-weight:bold;     
+}
+/* Cart-Order ends */
+/* Cart-footer starts */
+.footer-cart{ 
+clear:both;
+background-color: #333;
+color:white;
+padding:14px 24px;  
+text-align: center; 
+font-family: 'Varela Round', sans-serif;
+}
+.footer-cart-text a{
+text-decoration: none;
+color:white;
+}
+.footer-cart-text a:hover{
+text-decoration: underline;
+}    
+.contain-cart
+{
+margin-left:2%;
+margin-top:2%;
+display: grid;
+grid-template-columns:25% 25% 25% 25%;
+}
+/* Cart-footer ends */
+/* ***CART PAGE-ENDS*** */
 
